@@ -1,3 +1,9 @@
+2008-07-16  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/help-browser/dialog.c: applied patch from Róman Joost
+	as attached to bug #542826 (with some minor modifications). This
+	adds a "Search in this page" feature bound to Ctrl-F.
+
 2008-07-15  Sven Neumann  <sven@gimp.org>
 
 	* tools/pdbgen/pdb/edit.pdb: fixed documentation (bug #542972).
